--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -105,7 +105,7 @@ display: block;
     
         
         background-image: linear-gradient(to right, rgba(21, 21, 23, 0.6), rgba(31, 31, 36, 0.6)),
-                url(../../../images/hero_poster.jpg);
+                url(../images/hero_poster.jpg);
 
 }
 
